<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/Results"
        android:hint=""
        android:layout_gravity="right"
        android:textSize="50sp"
        android:layout_weight="0.15" />


    <LinearLayout
        android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingTop="20dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/seven"
        android:layout_weight="1"
        android:id="@+id/but7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/eight"
        android:layout_weight="1"
        android:id="@+id/but8"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/nine"
        android:layout_weight="1"
        android:id="@+id/but9"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/div"
        android:id="@+id/butSlash"/>

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_weight="1"
            android:id="@+id/but4"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_weight="1"
            android:id="@+id/but5"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/six"
            android:layout_weight="1"
            android:id="@+id/but6"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mul"
            android:layout_weight="1"
            android:id="@+id/butMulti"/>

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_weight="1"
            android:id="@+id/but1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_weight="1"
            android:id="@+id/but2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"
            android:id="@+id/but3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:layout_weight="1"
            android:id="@+id/butSub"/>

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_weight="1"
            android:id="@+id/but0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_weight="1"
            android:id="@+id/butPoint"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:layout_weight="1"
            android:id="@+id/butEqual"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:layout_weight="1"
            android:id="@+id/butPlus"/>

</LinearLayout>
</LinearLayout>